# ada-compliance-auditor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEMO.md  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
backend/: gemini_client.py  gemini_pipeline.py  main.py  pdf_generator.py  pipeline_client.py  prompts.py  violations.py
backend/data/: ada_codes.json  ada_knowledge_base.json  california_codes.json  cost_estimates.json  space_violations.json  visual_reference.json
docs/: speaker-notes.md
docs/hackathon/: challenges-awards.md  submission-form.md  submissions.md  sunday-agenda.md  tool-rocketride.md
docs/rocketride/: agentic-agents.md  agentic-crewai.md  agentic-langchain.md  agentic-mcp-client.md  api-get-task-status.md  api-send-method.md  api-terminate-method.md  api-use-method.md  api-validate-method.md  audio-player.md  audio-transcribe.md  data-llamaparse.md  data-reducto.md  database-mysql.md  embedding-image.md  embedding-openai.md  embedding-transformer.md  example-audio.md  example-basic-rag.md  example-code-chat.md  example-document-ingestion.md  example-llm-benchmark.md  example-multi-agent.md  example-pii.md  (+68 more)
frontend/: app.js  db.js  index.html  manifest.json  style.css  sw.js
pipeline/: ada_auditor.pipe  ada_auditor.pipe.json  test_connection.pipe
research/: ada_lawsuit_stats.md  compliance_triggers.md  disability_benefits.md  market_and_financials.md
tests/: conftest.py  test_gemini_client.py  test_gemini_pipeline.py  test_pdf_generator.py  test_prompts.py  test_violations.py
(+9 files in other folders)
