[project]
name = "ada-compliance-auditor"
version = "0.1.0"
description = "AI-powered ADA accessibility auditor using Gemini Vision + RocketRide"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9",
    "google-cloud-aiplatform>=1.72.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.4.10",
    "google-genai>=1.68.0",
    "qrcode>=8.2",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
